iteration 2 - middle - fixes